tests/e2e/semantics/mutation/string_contains_item_invalid.error
Error: syntax error in story at line 2, column 16

2|    b = a.contains(item: true)
                     ^^^^^^^^^^

E0115: Mutation `contains` requires argument `item` to be of type `string`, not `boolean`
